# bits

./: CMakeLists.txt  LICENSE  README.md
src/: bits.hpp
tests/: CMakeLists.txt  main.cpp
